meta data updated

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="A&D Traders"
+      content="A&D Traders is an online retailer that offers a wide selection of
+      high-quality products at competitive prices. Our mission is to
+      provide our customers with a convenient, hassle-free shopping
+      experience and exceptional customer service."
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
